# safere

./: AGENTS.md  BENCHMARKS.md  INTENTIONAL_DIVERGENCES.md  README.md  TESTING.md  collect-benchmark-results.sh  pom.xml  run-exhaustive-audit.sh  run-exhaustive-sweep.sh  run-java-benchmarks.sh  run-java-memory-benchmarks.sh
.agents/skills/divergence-result-review/: SKILL.md
.agents/skills/review-fix-loop/: SKILL.md
.agents/skills/review-fix-loop/agents/: openai.yaml
.github/workflows/: ci.yml
design/: PARSER_DIALECT_COMPATIBILITY.md
safere/: pom.xml
safere-benchmarks/: CONFIGURATION_EVALUATION.md  benchmark-data.json  pom.xml
safere-benchmarks/cpp/: re2_benchmark.cc
safere-benchmarks/go/: regexp_benchmark.go
safere-benchmarks/scripts/: compare-benchmarks.py  evaluate-java-benchmark-configs.py
safere-crosscheck/: README.md  pom.xml
safere-exhaustive/: README.md  pom.xml
safere-ffm-re2/: pom.xml
safere-ffm-re2/src/main/native/: CMakeLists.txt
safere-fuzz/: README.md  pom.xml
safere-fuzz/scripts/: run-fuzz-test.sh
safere-unicode/: pom.xml
safere/src/main/java/org/safere/: BitState.java  CharClass.java  CharClassExpander.java  Compiler.java  Dfa.java  EmptyOp.java  EngineContext.java  Inst.java  Matcher.java  MatcherTransitionInventory.java  Nfa.java  OnePass.java  ParseFlags.java  Parser.java  Pattern.java  Prog.java  Regexp.java  SafeReDiagnostics.java  Simplifier.java  UnicodeProperties.java  UnicodeTables.java
tools/exhaustive/: run-character-class-sweep.sh  run-grapheme-cluster-sweep.sh
tools/unicode/: UnicodeTableGenerator.java
(+68 files in other folders)
